# zependencies

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/routes/: +page.svelte
zependencies-common/: Cargo.toml
zependencies-common/src/: db.rs
zependencies-tauri/: .gitignore  .npmrc  package.json  pnpm-lock.yaml
zependencies-tauri/src-tauri/: Cargo.toml
zependencies-tauri/src-tauri/src/: main.rs
