[package]
name = "zependencies-tauri"
version = "0.0.0"
description = "A GUI application for querying dependency graphs"
license = "AGPL-3.0"
repository = "https://github.com/zependencies/zependencies"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
directories = "4.0.1"
error-stack = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.2.0"
tauri = { version = "1.2", features = ["shell-open"] }
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zependencies-common = { path = "../../zependencies-common" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
